# afspm

./: .gitignore  LICENSE  README.md  README.org  pyproject.toml  pytest.ini
afspm/: __init__.py  device_controller.py  spawn.py
afspm/components/: afspm_component.py  afspm_components_monitor.py  afspm_control_ui.py  afspm_controller.py  component.py  component_ui.py  control_ui.py  device_controller.py  drift.py  feedback.py  logger.py  monitor.py  scan_handler.py  scan_metadata.py  surface.py  visualizer.py
afspm/components/afspm/: component.py  control_ui.py  controller.py  monitor.py
afspm/components/device/: controller.py  params.py
afspm/components/device/controllers/asylum/: client.py  controller.py  params.py  readme.md  todos.org  xop.py
afspm/components/device/controllers/gxsm/: controller.py  gxsm_controller.py  gxsmconstants.py  params.py  readme.md  spawn_gxsm.py
afspm/components/device/controllers/image/: image_controller.py
afspm/components/device/controllers/omicron/: todos.org
afspm/components/device/controllers/omicronsxm/: __init__.py  controller.py  params.py  scan.py
afspm/components/drift/: correction.py  drift.py  rescanner.py  scheduler.py
afspm/components/helpers/: scan_handler.py
afspm/components/microscope/: actions.py  config_translator.py  map_translator.py  params.py  scheduler.py  translator.py
afspm/components/scan/: handler.py  metadata.py
afspm/interfaces/: geometry.proto  scan.proto
afspm/io/: cache_logic.py  common.py  publisher.py  pubsubcache.py  subscriber.py
afspm/io/cache/: cache_logic.py  pbc_logic.py
afspm/io/control/: client.py  commands.py  control_client.py  control_router.py  control_server.py  router.py  server.py
afspm/io/heartbeat/: heartbeat.py
afspm/io/protos/src/: analysis.proto  control.proto  feedback.proto  geometry.proto  scan.proto  signal.proto  spec.proto
afspm/io/pubsub/: cache.py  defaults.py  kill.py  publisher.py  pubsubcache.py  subscriber.py
afspm/io/pubsub/logic/: cache_logic.py  pbc_logic.py
afspm/utils/: array_converters.py  csv.py  graphify.py  log.py  logging.py  parser.py  proto_geo.py  protobuf.py  units.py
docs/: choosing_a_scheduler.md  code.org  code_overview.md  design_philosophy.md  microscopy.puml  overview.org  readme.md  style.puml  writing_a_device_controller.md  writing_a_microscope_translator.md
docs/src/: style.puml
samples/device_testing/gxsm/: test_gxsm.toml
samples/grid_subscan/: config.toml  freq_trigger_tip_detector.py  reset_scans_visualizer.py  roi_experimenter.py
samples/image_roi/: config.toml  explicit_config.toml  freq_trigger_tip_detector.py  image_device_controller.py  reset_scans_visualizer.py  roi_experimenter.py  simplest_config.toml
samples/keep_scanning/: config.toml  experiment.py
samples/point_subscan/: config.toml  experiment.py  roi_analysis.py  tip_analysis.py  visualize.py
samples/point_subscan/tests/: test_experiment.py
samples/point_subscan_drift/: config.toml  experiment.py  tip_analysis.py  translator.py  visualize.py
samples/testing/: conftest.py  sample_config.toml  test_controller.py
samples/testing/gxsm/: config.toml
scripts/drift/: keypoints.py  offline.py  visualize.py
tests/: log.py  test_spawn.py
tests/components/: sample_components.py  test_afspm_component.py  test_afspm_components_monitor.py  test_components_logic.py  test_drift.py  test_feedback.py  test_logger.py  test_metadata.py  test_scan_handler.py  test_surface.py
tests/components/controller/: sample_config.toml  test_controller.py
tests/components/controller/gxsm/: config.toml
tests/components/device/: test_controller.py
tests/components/device/controllers/: sample_config.toml
tests/components/drift/: test_correction.py  test_drift.py  test_scheduler.py
tests/components/microscope/: test_actions.py  test_config_translator.py  test_params.py  test_translator.py
tests/components/microscope/translators/: sample_config.toml  test_translator.py
tests/controller/: test_controller.py
tests/data/: Au_facetcontac0000.ibw  Au_facetcontac0000.nc  Au_facetcontac0003.ibw  Au_facetcontac0003.nc
tests/io/: test_cache_logic.py  test_control_logic.py  test_heartbeat.py  test_pubsub_logic.py
tests/utils/: test_array_converters.py  test_graphify.py  test_parser.py  test_proto_geo.py  test_units.py
(+27 files in other folders)
