[tool.poetry]
name = "afspm"
version = "0.1.0"
description = "Automation Framework for SPM"
authors = ["Nick Sullivan <nsulmol@gmail.com>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
xarray = "^2023.7.0"
pyzmq = [
      {version = "^25.1.0", markers = 'sys_platform != "win32"'},
      {version = "~23.2.1", markers = 'sys_platform == "win32"'}
]
numpy = "^1.25.1"
protobuf = "^4.23.4"
fire = "^0.5.0"
pysimplegui = "^4.60.5"
imageio = "^2.31.2"
tomli = "^2.0.1"
pint = "^0.22"
scipy = "^1.12.0"
matplotlib = "^3.8.2"
colorlog = "^6.8.2"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.6.7"
pytest = "^7.4.0"

[tool.poetry.group.gxsm]
optional = true

[tool.poetry.group.gxsm.dependencies]
gxsmread = {path = "../gxsmread"}

[tool.poetry.group.asylum.dependencies]
scifireaders = {path = "../scifireaders"}
igor2 = "^0.5.3"

[tool.poetry.scripts]
spawn = "afspm.spawn:cli_spawn"
spawn_monitorless = "afspm.spawn:cli_spawn_monitorless"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
