[tool.poetry]
name = "afspm"
version = "0.1.0"
description = "Automation Framework for SPM"
authors = ["Nick Sullivan <nsulmol@gmail.com>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
xarray = "^2023.7.0"
pyzmq = [
      {version = "^25.1.0", markers = 'sys_platform != "win32"'},
      {version = "~23.2.1", markers = 'sys_platform == "win32"'}
]
numpy = "^1.25.1"
protobuf = "5.29.3"
fire = "^0.5.0"
pysimplegui = "^4.60.5"
imageio = "^2.31.2"
tomli = "^2.0.1"
pint = "^0.22"
scipy = "^1.12.0"
matplotlib = "^3.8.2"
colorlog = "^6.8.2"
graphviz = "^0.20.3"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.6.7"
pytest = "^7.4.0"

[tool.poetry.group.gxsm]
optional = true

[tool.poetry.group.gxsm.dependencies]
gxsmread = {path = "../gxsmread"}

[tool.poetry.group.asylum]
optional = true

[tool.poetry.group.asylum.dependencies]
igor2 = "^0.5.3"
scifireaders = "^0.11.0"

[tool.poetry.group.omicronsxm]
optional = true

[tool.poetry.group.omicronsxm.dependencies]
scifireaders = "^0.11.0"

[tool.poetry.scripts]
spawn = "afspm.spawn:cli_spawn"
spawn_monitorless = "afspm.spawn:cli_spawn_monitorless"
graphify = 'afspm.utils.graphify:cli_graphify'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
